# systems-audio-lab

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  design_journal.tex  references.bib  systems_audio_tech_report.tex
oscilloscope-rp2040/: README.md
oscilloscope-rp2040/data/: calibration.json
oscilloscope-rp2040/data/burst/: 60Hz_hum_20260124_122408.npz  E5_power_cord_20260124_132029.npz  clean_A_20260124_133041.npz  clean_E_low_20260124_130954.npz  fun_drone_20260125_134014.npz  llama_A_20260124_134753.npz  llama_E5_power_cord_20260124_135156.npz  llama_E5_power_cord_20260124_135202.npz  llama_E5_power_cord_20260124_135207.npz  llama_E5_power_cord_20260124_135211.npz  llama_E_low_20260124_134553.npz  llama_low_E_harmonic_20260124_134935.npz  llama_off_20260124_133808.npz  llama_on-guitar_plugged_20260124_134302.npz  llama_on-no_guitar_20260124_134211.npz  llama_on-no_input_20260124_134018.npz  llama_sine_1kHz_20260125_125702.npz  llama_triangle_100Hz_20260125_125545.npz  low_E_harmonic_20260124_132611.npz  noise_floor_20260124_122611.npz  src_sine_1kHz_20260125_124507.npz  src_triangle_100Hz_20260125_124201.npz
oscilloscope-rp2040/data/continuous/: A.npz  B.npz  D.npz  E_high.npz  E_low.npz  G.npz  llama_sweep_20260125_125640.npz  song.npz  src_sweep_20260125_124443.npz
oscilloscope-rp2040/firmware/: README.md  main.py
oscilloscope-rp2040/notebooks/: 01_instrument_acquisition.ipynb.ipynb  02_instrument_analysis.ipynb  03_transfer_acquisition.ipynb  04_transfer_analysis.ipynb  README.md
oscilloscope-rp2040/schematics/: README.md  schematic.py
oscilloscope-rp2040/scripts/: README.md
oscilloscope-rp2040/scripts/analysis/: spectrum.py
oscilloscope-rp2040/scripts/capture/: master_transfer.py  record.py  stream.py
oscilloscope-rp2040/scripts/fun/: neon_torus.py  record_drone.py  render_landscape.py
oscilloscope-rp2040/scripts/signal/: play_sweep.py  play_wave.py
oscilloscope-rp2040/scripts/visualization/: joyplot.py  live_scope.py  playback_scope.py  render_scope_video.py
oscilloscope-rp2040/src/: README.md  __init__.py  audio.py  calibration.py  config.py  daq.py  diagnostics.py  dsp.py  experiments.py  generate_svg.py  io.py  metrics.py  plots.py  render.py  viz.py
oscilloscope-rp2040/sysaudio/: README.md  calibration.py  config.py  daq.py  dsp.py  io.py  render.py  viz.py
oscilloscope-rp2040/tests/: README.md  test_imports.py
power-regulator-12v-to-9v/: README.md
power-regulator-12v-to-9v/schematic/: schematic.py
red-llama-build/: README.md
red-llama-build/procurement/: My Inventory Updated.csv  Shopping List.csv  info.txt
