[project]
name = "systems-audio-lab"
version = "0.9.0"
description = "A complete systems engineering project, spanning software-driven logistics, custom power regulation, embedded instrumentation, and empirical analysis of non-linear analog circuits."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyserial>=3.5",
    "schemdraw>=0.22",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sounddevice>=0.5.5",
]

[dependency-groups]
dev = []
