[project]
name = "systems-audio-lab"
version = "0.9.0"
description = "A complete systems engineering project, spanning software-driven logistics, custom power regulation, embedded instrumentation, and empirical analysis of non-linear analog circuits."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyserial>=3.5",
    "schemdraw>=0.22",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sounddevice>=0.5.5",
]

[dependency-groups]
dev = [
    "nbmake>=1.5.5",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"

testpaths = [
    "oscilloscope-rp2040/tests",
]

pythonpath = [
    "oscilloscope-rp2040/src",
]
