[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "systems-audio-lab"
version = "0.9.0"
description = "A complete systems engineering project, spanning software-driven logistics, custom power regulation, embedded instrumentation, and empirical analysis of non-linear analog circuits."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyserial>=3.5",
    "schemdraw>=0.22",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "sounddevice>=0.5.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "nbmake>=1.5.5",
    "pandas-stubs>=2.3.3.260113",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "scipy-stubs>=1.17.0.2",
    "types-colorama>=0.4.15.20250801",
    "types-decorator>=5.2.0.20251101",
    "types-defusedxml>=0.7.0.20250822",
    "types-jsonschema>=4.26.0.20260109",
    "types-pexpect>=4.9.0.20260127",
    "types-pygments>=2.19.0.20251121",
    "types-pyserial>=3.5.0.20251001",
    "types-seaborn>=0.13.2.20251221",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"

testpaths = [
    "oscilloscope-rp2040/tests",
]

pythonpath = ["oscilloscope-rp2040"]

[tool.setuptools.packages.find]
where = ["oscilloscope-rp2040"]
include = ["sysaudio*"]

[tool.mypy]
mypy_path = "oscilloscope-rp2040"
strict = true
pretty = true
show_error_codes = true
show_column_numbers = true

exclude = [
    "schematic\\.py$",
    "notebooks/.*",
    "\\.ipynb_checkpoints/.*",
    "firmware/.*"
]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "sounddevice.*",
    "serial.*",
    "seaborn.*",
    "matplotlib.*"
]
ignore_missing_imports = true
